Labs/require-labels/.chainsaw-test/bad-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  labels:
    my.io/foo: bar
spec:
  containers:
  - name: nginx
    image: nginx:1.12
