Labs/require-labels/.chainsaw-test/good-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  labels:
    app.kubernetes.io/name: "nginx"
spec:
  containers:
  - name: nginx
    image: nginx:1.12
